--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
 <body>
     <header>
-        <h1 class="HEAD"><span><a href="index.html">Anime-Holics</a></span></h1>
-        <div class="navbar">
+        <h1 class="HEAD"><span><a href="index.html">Anime-Holics</a></span></h1>        <div class="navbar">
             <nav class="navigation">
                 <ul class="nav-list">
                     <li class="nav-item">
